# bandcamp.albums

./: .gitignore  Main.hs  README.md  album.json  bandcamp.cabal  default.nix  stack.yaml
Data/: Bandcamp.hs  Downloadable.hs
Data/Bandcamp/: Album.hs  Cover.hs  Current.hs  Filename.hs  Title.hs  Track.hs
Entities/: Album.hs  Current.hs  File.hs  Track.hs
