name: bandcamp
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: base, text, aeson, wreq, bytestring, lens, http-client, directory, async, transformers, filepath
  default-extensions: LambdaCase, NoImplicitPrelude, OverloadedStrings, PackageImports, TypeApplications
  exposed-modules:
    Data.Downloadable
    Data.Bandcamp
    Data.Bandcamp.Cover
    Data.Bandcamp.Filename
    Data.Bandcamp.Track
    Data.Bandcamp.Album

executable bandcamp
  main-is: Main.hs
  build-depends: base, text, aeson, bytestring, lens, wreq, http-client, directory, async, transformers, directory, filepath
  default-extensions: DataKinds, LambdaCase, NoImplicitPrelude, OverloadedStrings, PackageImports, TypeApplications
  default-language: Haskell2010
