name: bandcamp
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: base, joint, text, aeson, wreq, bytestring, lens, http-client, directory, async, transformers, filepath, terminal-progress-bar
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeOperators
  exposed-modules:
    Data.Downloadable
    Data.Bandcamp.Cover
    Data.Bandcamp.Filename
    Data.Bandcamp.Track
    Data.Bandcamp.Album

executable bandcamp
  main-is: Main.hs
  build-depends: base, joint, text, aeson, bytestring, lens, wreq, http-client, directory, async, transformers, directory, filepath, terminal-progress-bar
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    NoImplicitPrelude,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeOperators
  default-language: Haskell2010
