name: bandcamp
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: iokasimov
maintainer: iokasimov.m@gmail.com
category: Web
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  build-depends: base, joint, tagged, text, aeson, wreq, bytestring, lens, http-client, directory, async, transformers, filepath, terminal-progress-bar
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  exposed-modules:
    Data.Downloadable
    Data.Bandcamp.Title
    Data.Bandcamp.Cover
    Data.Bandcamp.Filename
    Data.Bandcamp.Track
    Data.Bandcamp.Album
  ghc-options: -Wall -fno-warn-tabs

executable bandcamp
  main-is: Main.hs
  build-depends: base, joint, tagged, text, aeson, bytestring, lens, wreq, http-client, directory, async, transformers, directory, filepath, terminal-progress-bar
  default-extensions:
    DataKinds,
    ExplicitNamespaces,
    FlexibleContexts,
    LambdaCase,
    OverloadedStrings,
    PackageImports,
    RankNTypes,
    TypeApplications,
    TypeFamilies,
    TypeOperators
  other-modules:
    Data.Bandcamp.Album
    Data.Bandcamp.Cover
    Data.Bandcamp.Filename
    Data.Bandcamp.Title
    Data.Bandcamp.Track
    Data.Downloadable
  default-language: Haskell2010
  ghc-options: -Wall -fno-warn-tabs
